# glofnet

./: .gitignore  README.md  passu_map.html  pyproject.toml  test_gee.py
data/: README.md
data/reference/RGI/RGI2000-v7.0-G-14_south_asia_west/: RGI2000-v7.0-G-14_south_asia_west-rgi6_links.csv  RGI2000-v7.0-G-14_south_asia_west-submission_info.csv  RGI2000-v7.0-G-14_south_asia_west.shx
src/: test_gee.py
src/glofnet/common/: find_glacier.py
src/glofnet/sentinel/: config.py  download_sentinel.py
